--- a/style.css
+++ b/style.css
@@ -15,12 +15,15 @@ body{
 
 }
 .progress-kanban{
+    margin-top : 15px;
     width: 100%;
     height: 400px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;    border-radius: 13px;
 
 }
 .done{
+    margin-top : 15px;
+
     width: 100%;
     height: 400px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;    border-radius: 13px;
